# teff-py

./: README.md  pyproject.toml
examples/: example1_wf.py  mp_wf.py  remote_sample.py  thermal_conductivity_benchmark.py
examples/mn_demo/: mn_demo.py
examples/rc2_benchmark/: heatmap.py  rc2_benchmark.py
teff_py/: actions.py  async_actions.py  plumbum_wrappers.py  shell_command_wrapper.py  shell_command_wrappers.py  tdep_utils.py
tests/: test_actions.py  test_shell_command.py  test_shell_command_wrapper.py  test_shell_command_wrappers.py
